
* 1.3.1
- Built against svnClientAdapter 0.9.102, Subversion 1.6.x, SVNKit 1.3.x
- #1035: using the svntask as part of ant's parallel task should work properly now.
- #587: it should be possible now to reject suspicious certificates so only trusted ones will be accepted.
- #1272: command beginning and endings will be logged as verbose message as their mainly useful for
         for error scenarios.
- #828: 'wcVersion' won't incorporate 'svn:externals' anymore for the version calculation
- #906: added 'singleinfo', 'list' commands
- #906: added 'svnAvailable' condition
- #619, #689: the 'log' command now provides a verbose option for the changed pathes
- #815: the commands 'singleinfo' and 'info' are now supporting the property 'repourl'
- #916: the 'copy' command now supports the option 'makeParents' to enforce the creation of parental structures
- #1092: if 'failonerror' is set to false the 'svn' task will quit normally if there's no client adapter available
- #1209: the 'wcVersion' command now adds a '.' to the prefix if it's missing
- #1213: added the 'diffSummarize' command
- #1079: improved handling of 'wcVersion' for unversioned pathes

* 1.3.0
- First version released by Joshua Frankamp

* 1.2.1
- Built against svnClientAdapter r4107, Subversion 1.5.x, SVNKit 1.2.x
- fixed remote info bug
- fixed svnkit exists task
- added cleanup task

* 1.2-rc1
- Built against svnClientAdapter r3957, Subversion 1.5, SVNKit 1.20 beta4

* 1.1-rc3
- Built against svnClientAdapter r2847, Subversion 1.4.2 and SVNKit 1.1.0
- renamed references to JavaSVN (former name of SVNKit)
- renamed the svn task attribute "javasvn" to "svnkit"

* 1.1-rc2
- Built against svnClientAdapter r2834 and Subversion 1.4.0,
  incorporating numerous bug fixes and improvements from both.
- Added support for javasvn adapter
- Added the "url" option to <propget> command
- Added the "lastChangedDateProperty" to <status> command
- Added the "dateFormatter" attribute to <svn> task